@@ -7,7 +7,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '2.00';
+our $VERSION = '2.01';
 
 # create CONSTANTS for different Return Types
 use constant {
@@ -425,7 +425,7 @@ API" data providers (e.g. ASEAG)
 
 =head1 VERSION
 
-version 2.00
+version 2.01
 
 =head1 DESCRIPTION
 
